# OpenWebUI_Suite

./: .coveragerc  .env.example  .env.openrouter  .env.prod  .env.template  .gitignore  .ruff.toml  COMPLETE_DEPLOYMENT_COMMANDS.txt  CORE_SERVICES_FIX.txt  DATABASE_FIX_GUIDE.md  DEPENDENCY_AUDIT.md  DEPLOYMENT_BLOCKERS_RESOLVED.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOY_SUMMARY.md  ENHANCED_ROUTING_IMPLEMENTATION.md  ENHANCED_SCRIPT_SUMMARY.md  ENVIRONMENT_VARIABLES_SUMMARY.md  FINAL_DEPLOYMENT_COMMANDS.txt  IMPLEMENTATION_COMPLETE.md  MANUAL_DEPLOY_COMMANDS.txt  MEMORY_DEPLOYMENT.md  MODULE_ANALYSIS_REPORT.md  Makefile  OPENROUTER_IMPLEMENTATION_COMPLETE.md  OPENROUTER_MODELS.md  OPENROUTER_REFACTOR_STATUS.md  PYTHON_PATH_FIX.txt  README.md  SERVICE_DETECTION_FIX.md  SERVICE_GRAPH.mmd  SERVICE_MANAGER_IMPROVEMENTS.md  SERVICE_MAP.md  SERVICE_TYPE_DETECTION.md  SETUP.md  SIDECAR_ANALYSIS.md  SYSTEMD_TROUBLESHOOTING.md  complete-deployment.sh  compose.override.yml  compose.prod.yml  (+29 more)
.github/: copilot-instructions.md
00-pipelines-gateway/: AGENT.md  Dockerfile  pytest.ini  requirements.txt  start.py  start.sh  start_openrouter.py  test_api.py
01-intent-router/: AGENT.md  Dockerfile  requirements.txt  start.py  test_api.py
02-memory-2.0/: AGENT.md  Dockerfile  requirements.txt  start.py  test_api.py
03-feeling-engine/: AGENT.md  Dockerfile  direct_test.py  emotion_templates.json  requirements.txt  start.py  test_api.py  test_emotion_templates.py
04-hidden-multi-expert-merger/: AGENT.md  Dockerfile  direct_test.py  requirements.txt  start.py  test_api.py
05-drive-state/: AGENT.md  Dockerfile  direct_test.py  drive_states.json  requirements.txt  start.py  test_api.py
06-byof-tool-hub/: AGENT.md  Dockerfile  requirements.txt  start.py  test_api.py
07-tandoor-sidecar/: AGENT.md  Dockerfile  requirements.txt  start.py  test_api.py
08-openbb-sidecar/: Dockerfile  requirements.txt
09-proactive-daemon/: AGENT.md  Dockerfile  README.md  requirements.txt  start.py  start.sh  test_daemon.py
10-multimodal-router/: Dockerfile  README.md  requirements.txt  test_api.py
11-stt-tts-gateway/: AGENT.md  Dockerfile  README.md  docker-compose.yml  requirements.txt  start.py  start.sh  test_api.py
12-avatar-overlay/: AGENT.md  Dockerfile  README.md  package.json  requirements.txt  start.bat  start.sh  test_avatar.html  vite.config.js
13-policy-guardrails/: AGENT.md  Dockerfile  requirements.txt  start.bat  start.py  start.sh  test_api.py
14-telemetry-cache/: AGENT.md  Dockerfile  README.md  docker-compose.yml  prometheus.yml  requirements.txt  start.py  start.sh  test_api.py
15-bytebot-gateway/: AGENT.md  Dockerfile  README.md  docker-compose.yml  requirements.txt  start.py  start.sh  test_api.py
16-fastvlm-sidecar/: AGENT.md  Dockerfile  requirements.txt  test_api.py
docker/: Dockerfile  Dockerfile.base
docs/: ENVIRONMENT_SETUP.md  PROJECTS.md
n8n-workflows/: OWUI-deploy-webhook.json  a1111-txt2img.json  github-crawl.json  gmail-basic.json  google-calendar-upcoming.json  mcp-tools.json  metrics_heartbeat.json  openrouter-main-workflow.json  openrouter-mcp-integration.json  openrouter-router.json  proxmox-maintenance.json
openwebui-suite/: README.md
owui-plugin-ollama-tools/: pyproject.toml
owui-plugin-ollama-tools/src/owui_plugin_ollama_tools/: __init__.py  memory.py  ollama.py  plugin.py
owui-plugin-template/: README.md  pyproject.toml
owui-plugin-template/.github/workflows/: ci.yml
owui-plugin-template/src/owui_plugin_template/: __init__.py  plugin.py
owui-plugin-template/tests/: test_smoke.py
owui-widget-template/: package.json  tsconfig.json
(+104 files in other folders)
