[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owui-plugin-ollama-tools"
version = "0.1.0"
description = "OpenWebUI plugin for Ollama integration and tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenWebUI Suite", email = "contact@example.com"}
]
keywords = ["openwebui", "plugin", "ollama", "llm", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]

dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "sqlite-utils>=3.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.22.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/<ORG>/owui-plugin-ollama-tools"
Repository = "https://github.com/<ORG>/owui-plugin-ollama-tools.git"
Issues = "https://github.com/<ORG>/owui-plugin-ollama-tools/issues"
Documentation = "https://github.com/<ORG>/owui-plugin-ollama-tools#readme"

[project.entry-points."openwebui.plugins"]
ollama = "owui_plugin_ollama_tools.plugin:register"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
